--- a/deploy_prod_playbook.yaml
+++ b/deploy_prod_playbook.yaml
@@ -3,7 +3,7 @@
   connection: local
   become: yes
   vars:
-    service_name: 'auth_web'
+    service_name: 'auth-web'
 
   vars_files: /home/secrets/prod_postgres_password
   tasks:
