--- a/auth-web/src/main/resources/application.yml
+++ b/auth-web/src/main/resources/application.yml
@@ -3,6 +3,9 @@ server:
 logging:
   level:
     auth.service: DEBUG
+    org:
+      springframework:
+        security: DEBUG
 spring:
   application:
     name: auth-service
