--- a/auth-web/src/main/resources/application.yml
+++ b/auth-web/src/main/resources/application.yml
@@ -11,7 +11,7 @@ spring:
     name: auth-service
   jpa:
     hibernate:
-      ddl-auto: create
+      ddl-auto: update
       naming:
         implicit-strategy: org.hibernate.boot.model.naming.ImplicitNamingStrategyJpaCompliantImpl
     database-platform: org.hibernate.dialect.PostgreSQL94Dialect
